modified footer and links added

--- a/pro_farm/templates/index.html
+++ b/pro_farm/templates/index.html
@@ -5,8 +5,8 @@
 
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>KisanTech</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">  
+    <title>KisanTech</title>   
 
     <!-- links -->
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,600,700,800,900&display=swap"
@@ -22,8 +22,8 @@
 
 
 
-            <link rel="stylesheet" href="/../farm_app/pro_farm/static/css/icomoon.css">
-            <!-- <link rel="stylesheet" href="/../racks/css/style.css"> -->
+    <link rel="stylesheet" href="/../farm_app/pro_farm/static/css/icomoon.css">
+    <!-- <link rel="stylesheet" href="/../racks/css/style.css"> -->
 </head>
 
 <body>
@@ -74,7 +74,8 @@
                                 <div class="row">
                                     <div class="col-md-3"><br></div>
                                     <div class="col-md-3">
-                                        <img src="/../farm_app/pro_farm/static/images/user dp.jpg" style="border-radius: 50%; width: 200px; height: 200px;" alt="">
+                                        <img src="/../farm_app/pro_farm/static/images/user dp.jpg"
+                                            style="border-radius: 50%; width: 200px; height: 200px;" alt="">
                                     </div>
                                     <div style="position: relative; margin-left:150px;">
                                         <h2>Name - ooiiii</h3>
@@ -136,7 +137,8 @@
                     </div>
                 </div>
             </div>
-            <div class="slider-item js-fullheight" style="background-image:url(/../farm_app/pro_farm/static/images/back3.jpg);">
+            <div class="slider-item js-fullheight"
+                style="background-image:url(/../farm_app/pro_farm/static/images/back3.jpg);">
                 <div class="overlay"></div>
                 <div class="container">
                     <div class="row no-gutters slider-text js-fullheight align-items-center">
@@ -206,7 +208,8 @@
                         </div>
                         <div class="media-body p-2">
                             <h3 class="heading">Financial Help</h3>
-                            <p>Click here for financial support. "A good financial plan is a roadmap that shows us exactly how the choices we make today will affect our future."</p>
+                            <p>Click here for financial support. "A good financial plan is a roadmap that shows us
+                                exactly how the choices we make today will affect our future."</p>
                         </div>
                     </div>
                 </div>
@@ -236,7 +239,7 @@
                         </div>
                     </div>
                 </div>
-    
+
                 <div class="col-md-6 col-lg-3 d-flex align-self-stretch ftco-animate">
                     <div class="media block-6 services d-block text-center">
                         <div class="d-flex justify-content-center">
@@ -260,7 +263,8 @@
             <div class="row justify-content-center mb-5 pb-5">
                 <div class="col-md-7 text-center heading-section ftco-animate">
                     <span class="subheading">OUR SPECIAL FEATURES</span>
-                    <h2>Here you will get the information of weather of your location, financial help and fertilizers suitable for your crops!!</h2>
+                    <h2>Here you will get the information of weather of your location, financial help and fertilizers
+                        suitable for your crops!!</h2>
                 </div>
             </div>
         </div>
@@ -282,7 +286,8 @@
                                     <div><a href="#"></a></div>
                                     <div><a href="#" class="meta-chat"><span class="icon-chat"></span> </a></div>
                                 </div>
-                                <h3 class="heading"><a href="#">click here to know the climatic changes for the next seven days.</a></h3>
+                                <h3 class="heading"><a href="#">click here to know the climatic changes for the next
+                                        seven days.</a></h3>
                             </div>
                         </div>
                     </div>
@@ -297,7 +302,8 @@
                                     <div><a href="#"></a></div>
                                     <div><a href="#" class="meta-chat"><span class="icon-chat"></span> </a></div>
                                 </div>
-                                <h3 class="heading"><a href="#">Click here to get the benifit of amazing loan offers.</a></h3>
+                                <h3 class="heading"><a href="#">Click here to get the benifit of amazing loan
+                                        offers.</a></h3>
                             </div>
                         </div>
                     </div>
@@ -312,7 +318,8 @@
                                     <div><a href="#"></a></div>
                                     <div><a href="#" class="meta-chat"><span class="icon-chat"></span> </a></div>
                                 </div>
-                                <h3 class="heading"><a href="#">Click here to get the appropriate fertilizers for your crop at best price.</a></h3>
+                                <h3 class="heading"><a href="#">Click here to get the appropriate fertilizers for your
+                                        crop at best price.</a></h3>
                             </div>
                         </div>
                     </div>
@@ -331,7 +338,8 @@
                         <div class="row justify-content-center mb-5 pb-5">
                             <div class="col-md-7 text-center heading-section ftco-animate">
                                 <span class="subheading">OUR SPECIAL FEATURES</span>
-                                <h2>Here you will get the information of weather of your location, financial help and fertilizers suitable for your crops!!</h2>
+                                <h2>Here you will get the information of weather of your location, financial help and
+                                    fertilizers suitable for your crops!!</h2>
                             </div>
                         </div>
                     </div>
@@ -348,7 +356,8 @@
                                     <div><a href="#"></a></div>
                                     <div><a href="#" class="meta-chat"><span class="icon-chat"></span> </a></div>
                                 </div>
-                                <h3 class="heading"><a href="#">click here to know the climate change for next seven days.</a></h3>
+                                <h3 class="heading"><a href="#">click here to know the climate change for next seven
+                                        days.</a></h3>
                                 <h3 class="heading"><a href="#"></a></h3>
                             </div>
                         </div>
@@ -364,7 +373,8 @@
                                     <div><a href="#"></a></div>
                                     <div><a href="#" class="meta-chat"><span class="icon-chat"></span> </a></div>
                                 </div>
-                                <h3 class="heading"><a href="#">Click here to get the benifit of amazing loan offers.</a></h3>
+                                <h3 class="heading"><a href="#">Click here to get the benifit of amazing loan
+                                        offers.</a></h3>
                             </div>
                         </div>
                     </div>
@@ -379,7 +389,8 @@
                                     <div><a href="#"></a></div>
                                     <div><a href="#" class="meta-chat"><span class="icon-chat"></span> </a></div>
                                 </div>
-                                <h3 class="heading"><a href="#">Click here to get the appropriate fertilizers for your crop at best price.</a></h3>
+                                <h3 class="heading"><a href="#">Click here to get the appropriate fertilizers for your
+                                        crop at best price.</a></h3>
                             </div>
                         </div>
                     </div>
@@ -405,30 +416,36 @@
             </div>
             <div class="row no-gutters">
                 <div class="block-3 d-md-flex ftco-animate">
-                    <a href="portfolio.html" class="image" style="background-image: url('/../farm_app/pro_farm/static/images/a.png'); "></a>
+                    <a href="portfolio.html" class="image"
+                        style="background-image: url('/../farm_app/pro_farm/static/images/a.png'); "></a>
                     <div class="text">
                         <h4 class="subheading">Illustration</h4>
-                        <h2 class="heading"><a href="portfolio.html">Even the all-powerful Pointing has no control</a></h2>
+                        <h2 class="heading"><a href="portfolio.html">Even the all-powerful Pointing has no control</a>
+                        </h2>
                         <p>Even the all-powerful Pointing has no control about the blind texts it is an almost
                             unorthographic life One day however a small line of blind text by the name of Lorem Ipsum
                             decided to leave for the far World of Grammar.</p>
                     </div>
                 </div>
                 <div class="block-3 d-md-flex ftco-animate">
-                    <a href="portfolio.html" class="image order-2" style="background-image: url('/../farm_app/pro_farm/static/images/b.jpg'); "></a>
+                    <a href="portfolio.html" class="image order-2"
+                        style="background-image: url('/../farm_app/pro_farm/static/images/b.jpg'); "></a>
                     <div class="text order-1">
                         <h4 class="subheading">Application</h4>
-                        <h2 class="heading"><a href="portfolio.html">Even the all-powerful Pointing has no control</a></h2>
+                        <h2 class="heading"><a href="portfolio.html">Even the all-powerful Pointing has no control</a>
+                        </h2>
                         <p>Even the all-powerful Pointing has no control about the blind texts it is an almost
                             unorthographic life One day however a small line of blind text by the name of Lorem Ipsum
                             decided to leave for the far World of Grammar.</p>
                     </div>
                 </div>
                 <div class="block-3 d-md-flex ftco-animate">
-                    <a href="portfolio.html" class="image" style="background-image: url('/../farm_app/pro_farm/static/images/c.png'); "></a>
+                    <a href="portfolio.html" class="image"
+                        style="background-image: url('/../farm_app/pro_farm/static/images/c.png'); "></a>
                     <div class="text">
                         <h4 class="subheading">Web Design</h4>
-                        <h2 class="heading"><a href="portfolio.html">Even the all-powerful Pointing has no control</a></h2>
+                        <h2 class="heading"><a href="portfolio.html">Even the all-powerful Pointing has no control</a>
+                        </h2>
                         <p>Even the all-powerful Pointing has no control about the blind texts it is an almost
                             unorthographic life One day however a small line of blind text by the name of Lorem Ipsum
                             decided to leave for the far World of Grammar.</p>
@@ -438,7 +455,22 @@
         </div>
     </section>
 
+    <section>
+        <div>
+            <h3 style="color:rgb(17, 36, 36)">HELPFUL LINKS FOR YOU!!</h3>
+            <a 
+                href="https://krishijagran.com/agriculture-world/pm-kisan-samman-nidhi-yojana-direct-online-link-application-form-important-documents-eligibility-criteria/"target="_blank">Click here
+                to associate with <strong>PM-KISAN-SAMMAN-NIDHI-YOJANA</strong></a>
+        </div>
 
+        <div>
+            <a 
+             href="https://kisansamadhan.com/central-government-schemes/ " target="_blank">Click here to know all details of
+                <strong>CENTRAL-GOVERNMENT-SCHEMES</strong></a>
+        </div>
+
+
+    </section>
 
 
     <footer class="ftco-footer ftco-bg-dark ftco-section">
@@ -446,9 +478,13 @@
             <div class="row mb-5">
                 <div class="col-md">
                     <div class="ftco-footer-widget mb-4">
-                        <h2 class="ftco-heading-2">Company</h2>
-                        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there
-                            live the blind texts.</p>
+                        <h2 class="ftco-heading-2">DEVELOPERS</h2>
+                        <p><strong style="color:#d1002c;"> PRO-CODERS</strong> 
+                            <div>Aaditya Singhal  </div>
+                            <div>Abhay Dhiman </div>
+                            <div>Ayush Malik </div>
+                            <div>Akshita Sharma </div>
+                            </p>
                         <ul class="ftco-footer-social list-unstyled float-md-left float-lft">
                             <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                             <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -458,7 +494,7 @@
                 </div>
                 <div class="col-md">
                     <div class="ftco-footer-widget mb-4">
-                        <h2 class="ftco-heading-2">Quick Links</h2>
+                        <h2 class="ftco-heading-2">QUICK LINKS</h2>
                         <ul class="list-unstyled">
                             <li><a href="#" class="py-2 d-block">Home</a></li>
                             <li><a href="#" class="py-2 d-block">About</a></li>
@@ -471,18 +507,19 @@
                 </div>
                 <div class="col-md">
                     <div class="ftco-footer-widget mb-4">
-                        <h2 class="ftco-heading-2">Contact Information</h2>
+                        <h2 class="ftco-heading-2">CONTACT</h2>
                         <ul class="list-unstyled">
-                            <li><a href="#" class="py-2 d-block">198 West 21th Street, Suite 721 New York NY 10016</a></li>
-                            <li><a href="#" class="py-2 d-block">+ 1235 2355 98</a></li>
-                            <li><a href="#" class="py-2 d-block">info@yoursite.com</a></li>
-                            <li><a href="#" class="py-2 d-block">email@email.com</a></li>
+                            <li><a href="#" class="py-2 d-block "style=" color: #d1002c ;">Aaditya Singhal -<a href=" https://github.com/Aaditya1978">https://github.com/Aaditya1978</a></a>
+                            </li>
+                            <li><a href="#" class="py-2 d-block"style=" color: #d1002c;">Abhay Dhiman -<a href="  https://github.com/abhaydhiman"> https://github.com/abhaydhiman</a></a></li>
+                            <li><a href="#" class="py-2 d-block"style=" color: #d1002c;">Ayush Malik -<a href="https://github.com/Ayush-Malik ">https://github.com/Ayush-Malik</a></a></li>
+                            <li><a href="#" class="py-2 d-block"style=" color: #d1002c;">Akshita Sharma - <a href="https://github.com/akshita-sharma8609 ">https://github.com/akshita-sharma8609</a></a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-md">
                     <div class="ftco-footer-widget mb-4">
-                        <h2 class="ftco-heading-2">Newsletter</h2>
+                        <h2 class="ftco-heading-2">NEWSLETTER</h2>
                         <p>Far far away, behind the word mountains, far from the countries.</p>
                         <form action="#" class="subscribe-form">
                             <div class="form-group">
@@ -495,13 +532,14 @@
             </div>
             <div class="row">
                 <div class="col-md-12 text-center">
-    
+
                     <p>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         Copyright &copy;
-                        <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is
-                        made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com"
-                            target="_blank">Colorlib</a>
+                        <script>document.write(new Date().getFullYear());</script> All rights reserved | This template
+                        is
+                        made  <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com"
+                            target="_blank"> &nbsp; PRO-CODERS</a>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     </p>
                 </div>
