--- a/pro_farm/static/css/style.css
+++ b/pro_farm/static/css/style.css
@@ -8787,8 +8787,8 @@ h1, h2, h3, h4, h5,
           color: #fff;
           line-height: 1.1;
           font-weight: 900;
-          position: relative; 
-          text-shadow: 
+          position: relative; }
+          /* text-shadow: 
             -1px -1px 0 black,
             1px -1px 0 black,
             -1px 1px 0 black,
@@ -8796,7 +8796,7 @@ h1, h2, h3, h4, h5,
             -2px 0 0 black,
             2px 0 0 black,
             0 2px 0 black,
-            0 -2px 0 black;}
+            0 -2px 0 black;} */
         .owl-carousel.home-slider .slider-item .slider-text h1 span {
           color: #000000;
           display: block; }
@@ -9431,6 +9431,16 @@ textarea.form-control {
   color: #d1002c;
   font-size: 12px;
   font-weight: 600;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  position: relative; }
+
+.heading-section .myheading {
+  font-size: 30px;
+  margin-bottom: 0;
+  color: #5a5859;
+  font-size: 30px;
+  font-weight: 800;
   letter-spacing: 2px;
   text-transform: uppercase;
   position: relative; }
@@ -10747,7 +10757,7 @@ iframe {
     background-position: center center;
     position: relative;
     padding: 15em 0;
-    background: #78d5ef; }
+    background: #e9ebeb; }
   .ftco-section-parallax .parallax-img-2 {
     background-size: cover;
     background-repeat: no-repeat;
@@ -10755,20 +10765,14 @@ iframe {
     position: relative;
     padding: 15em 0;
     background: #78efd1; }
-  .ftco-section-parallax .parallax-img-3 {
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-    position: relative;
-    padding: 15em 0;
-    background: #464a4e; }
-    .ftco-section-parallax .parallax-img.parallax-img-2.parallax-img-3 {
+    .ftco-section-parallax .parallax-img.parallax-img-2 {
       background: #ee76ad; }
 
 
 
 .block-3 .text, .block-3 .image {
-  width: 100%;
+  height: 120%;
+  width: 120%;
   padding: 10% 7%;
   display: block; }
   @media (min-width: 768px) {
@@ -10803,16 +10807,8 @@ iframe {
 
 .blog-entry-2 {
   background: #fff;
-  opacity: .5;
-  -webkit-box-shadow: 0px 4px 18px -12px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0px 4px 18px -12px rgba(0, 0, 0, 0.75);
-  -ms-box-shadow: 0px 4px 18px -12px rgba(0, 0, 0, 0.75);
-  -o-box-shadow: 0px 4px 18px -12px rgba(0, 0, 0, 0.75);
-  box-shadow: 0px 4px 18px -12px rgba(0, 0, 0, 0.75);
-  border: 1px solid #f7f7f7; }
-  .blog-entry-2:hover{
-  background: #fff;
-  opacity: 1;
+  border-radius: 25px;
+  transition: transform .2s;
   -webkit-box-shadow: 0px 4px 18px -12px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px 4px 18px -12px rgba(0, 0, 0, 0.75);
   -ms-box-shadow: 0px 4px 18px -12px rgba(0, 0, 0, 0.75);
@@ -10825,6 +10821,8 @@ iframe {
   @media (max-width: 767.98px) {
     .blog-entry-2 {
       margin-bottom: 30px; } }
+  .blog-entry-2:hover{
+  transform: scale(1.1); }
   .blog-entry-2 .text {
     position: relative;
     border-top: 0;
@@ -10876,6 +10874,8 @@ iframe {
 .block-20-1 {
   overflow: hidden;
   background-size: cover;
+  border-top-right-radius: 25px;
+  border-top-left-radius: 25px;
   background-repeat: no-repeat;
   background-position: center center;
   height: 350px;
