updated styling and images and deleted extra files

--- a/templates/user_home.html
+++ b/templates/user_home.html
@@ -1,5 +1,3 @@
-{% load static %}
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -13,15 +11,13 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,600,700,800,900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="{% static '/css/animate.css' %}">
-    <link rel="stylesheet" href="{% static '/css/owl.theme.default.min.css' %}">
-    <link rel="stylesheet" href="{% static '/css/magnific-popup.css' %}">
-    <link rel="stylesheet" href="{% static '/css/owl.carousel.min.css' %}">
-    <link rel="stylesheet" href="{% static '/css/flaticon.css' %}">
-    <link rel="stylesheet" href="{% static '/css/style.css' %}">
-    <link rel="stylesheet" href="{% static '/css/icomoon.css' %}">
-
-    <!-- <link rel="stylesheet" href="/../racks/css/style.css"> -->
+    <link rel="stylesheet" href="..\static\css\animate.css">
+    <link rel="stylesheet" href="..\static\css\owl.theme.default.min.css">
+    <link rel="stylesheet" href="..\static\css\magnific-popup.css">
+    <link rel="stylesheet" href="..\static\css\owl.carousel.min.css">
+    <link rel="stylesheet" href="..\static\css\flaticon.css">
+    <link rel="stylesheet" href="..\static\css\style.css">
+    <link rel="stylesheet" href="..\static\css\icomoon.css">
 </head>
 
 <body>
@@ -57,13 +53,14 @@
     <!-- Started carousel -->
     <section class="hero-wrap degree-right js-fullheight">
         <div class="home-slider js-fullheight owl-carousel">
-            <div class="slider-item js-fullheight" style="background-image:url({% static 'images/background1.jpg' %});">
+            <div class="slider-item js-fullheight" style="background-image:url(../static/images/background1.jpg);">
                 <div class="overlay"></div>
                 <div class="container">
                     <div class="row no-gutters slider-text js-fullheight align-items-center">
                         <div class="col-md-6 ftco-animate">
                             <div class="text">
-                                <h1 class="mb-4 navbar-brand">Kisan<span style="color:#d1002c; display:inline-block;">Tech</span></h1>
+                                <h1 class="mb-4 navbar-brand">Kisan<span
+                                        style="color:#d1002c; display:inline-block;">Tech</span></h1>
                                 <p style="color: white;"><strong>WELL ROOTED TO NATURE.</strong></p>
                             </div>
                         </div>
@@ -73,13 +70,14 @@
                                     <div class="col-md-3"><br></div>
                                     <div class="col-md-3">
                                         <a href="#">
-                                            <img src="{% static 'images/edited_vali3.jpg' %}"
+                                            <img src="../static/images/edited_vali4.png"
                                                 style="border-radius: 50%; width: 150px; height: 150px;" alt="">
                                         </a>
                                     </div>
                                     <div style="position: relative; margin-left:150px;">
-                                        <h2 class="navbar-brand">Name-<span style="color:#d1002c; display:inline-block;">ooiiii</span></h2>
-                                            <p>number - 1234567890</p>
+                                        <h2 class="navbar-brand">Name-<span
+                                                style="color:#d1002c; display:inline-block;">ooiiii</span></h2>
+                                        <p>number - 1234567890</p>
                                     </div>
                                 </div>
                             </div>
@@ -87,13 +85,15 @@
                     </div>
                 </div>
             </div>
-            <div class="slider-item js-fullheight" style="background-image:url({% static 'images/edited_vali2.jpg' %});">
+            <div class="slider-item js-fullheight"
+                style="background-image:url(../static/images/edited_vali2.jpg);">
                 <div class="overlay"></div>
                 <div class="container">
                     <div class="row no-gutters slider-text js-fullheight align-items-center">
                         <div class="col-md-6 ftco-animate">
                             <div class="text">
-                                <h1 class="mb-4 navbar-brand">Kisan<span style="color:#d1002c; display:inline-block;">Tech</span></h1>
+                                <h1 class="mb-4 navbar-brand">Kisan<span
+                                        style="color:#d1002c; display:inline-block;">Tech</span></h1>
                                 <p style="color: white;"><strong>WELL ROOTED TO NATURE.</strong></p>
                             </div>
                         </div>
@@ -103,7 +103,7 @@
                                     <div class="col-md-3"><br></div>
                                     <div class="col-md-3">
                                         <a href="#">
-                                            <img src="{% static 'images/edited_vali4.png' %}"
+                                            <img src="../static/images/edited_vali4.png"
                                                 style="border-radius: 50%; width: 150px; height: 150px;" alt="">
                                         </a>
                                     </div>
@@ -117,13 +117,14 @@
                     </div>
                 </div>
             </div>
-            <div class="slider-item js-fullheight" style="background-image:url({% static 'images/b2.jpg' %});">
+            <div class="slider-item js-fullheight" style="background-image:url(../static/images/Bg.jpg);">
                 <div class="overlay"></div>
                 <div class="container">
                     <div class="row no-gutters slider-text js-fullheight align-items-center">
                         <div class="col-md-6 ftco-animate">
                             <div class="text">
-                                <h1 class="mb-4 navbar-brand">Kisan<span style="color:#d1002c; display:inline-block;">Tech</span></h1>
+                                <h1 class="mb-4 navbar-brand">Kisan<span
+                                        style="color:#d1002c; display:inline-block;">Tech</span></h1>
                                 <p style="color: #fff;"><strong>WELL ROOTED TO NATURE.</strong></p>
                             </div>
                         </div>
@@ -133,7 +134,7 @@
                                     <div class="col-md-3"><br></div>
                                     <div class="col-md-3">
                                         <a href="#">
-                                            <img src="{% static 'images/user dp.jpg' %}"
+                                            <img src="../static/images/edited_vali4.png"
                                                 style="border-radius: 50%; width: 150px; height: 150px;" alt="">
                                         </a>
                                     </div>
@@ -162,7 +163,7 @@
                 <div class="col-md-7 text-center heading-section ftco-animate">
                     <h2 class="myheading"> OUR SPECIAL FEATURES </h2>
                     <span class="subheading">HERE YOU WILL GET THE INFORMATION OF WEATHER OF YOUR LOCATION, FINANCIAL
-                    HELP AND FERTILIZERS SUITABLE FOR YOUR CROPS!!
+                        HELP AND FERTILIZERS SUITABLE FOR YOUR CROPS!!
                     </span>
                 </div>
             </div>
@@ -176,82 +177,13 @@
 
     <!-- Main features in cards -->
     <section class="ftco-section-parallax degree-right">
-        <!-- <div class="parallax-img d-flex align-items-center">
-            <div class="container">
-                <div class="row d-flex justify-content-center">
-                    <div class="col-md-4 ftco-animate">
-                        <div class="blog-entry-2">
-                            <a href="blog-single.html" class="block-20-1"
-                                style="background-image: url({% static 'images/ambani_sir.jpg' %});">
-                            </a>
-                            <div class="text p-4 d-block">
-                                <div class="meta mb-3">
-                                    <div><a href="#">July 12, 2018</a></div>
-                                    <div><a href="#">Admin</a></div>
-                                    <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
-                                </div>
-                                <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind
-                                        texts</a></h3>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 ftco-animate">
-                        <div class="blog-entry-2" data-aos-delay="100">
-                            <a href="blog-single.html" class="block-20-1"
-                                style="background-image: url({% static 'images/ambani_sir.jpg' %});">
-                            </a>
-                            <div class="text p-4">
-                                <div class="meta mb-3">
-                                    <div><a href="#">July 12, 2018</a></div>
-                                    <div><a href="#">Admin</a></div>
-                                    <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
-                                </div>
-                                <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind
-                                        texts</a></h3>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 ftco-animate">
-                        <div class="blog-entry-2" data-aos-delay="100">
-                            <a href="blog-single.html" class="block-20-1"
-                                style="background-image: url({% static 'images/ambani_sir.jpg' %});">
-                            </a>
-                            <div class="text p-4">
-                                <div class="meta mb-3">
-                                    <div><a href="#">July 12, 2018</a></div>
-                                    <div><a href="#">Admin</a></div>
-                                    <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
-                                </div>
-                                <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind
-                                        texts</a></h3>
-                            </div>
-                        </div>
-                    </div>-->
-        <!-- <div class="col-md-10 text-center heading-section heading-section-white ftco-animate">
-                        <h2 class="h1 font-weight-bold">Turn every channel into a revenue channel and drive business growth
-                        </h2>
-                        <p><a href="#" class="btn btn-primary btn-outline-white mt-3 py-3 px-4">View more details</a></p>
-                    </div> -->
-        <!-- </div>
-            </div>
-        </div> -->
         <div class="parallax-img d-flex align-items-center">
             <div class="container">
-                <!-- <div class="ftco-section-2">
-                    <div class="container">
-                        <div class="row justify-content-center mb-5 pb-5">
-                            <div class="col-md-7 text-center heading-section ftco-animate">
-                                <span class="subheading">Something</span>
-                                <h2>About Something</h2>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
                 <div class="row d-flex justify-content-center">
                     <div class="col-md-4 ftco-animate">
                         <div class="blog-entry-2">
                             <a href="blog-single.html" class="block-20-1"
-                                style="background-image: url({% static 'images/weather2.jpg' %});">
+                                style="background-image: url(../static/images/weather2.jpg);">
                             </a>
                             <div class="text p-4 d-block">
                                 <div class="meta mb-3">
@@ -267,7 +199,7 @@
                     <div class="col-md-4 ftco-animate">
                         <div class="blog-entry-2" data-aos-delay="100">
                             <a href="blog-single.html" class="block-20-1"
-                                style="background-image: url({% static 'images/financial.jpeg' %});">
+                                style="background-image: url(../static/images/financial.jpeg);">
                             </a>
                             <div class="text p-4">
                                 <div class="meta mb-3">
@@ -283,7 +215,7 @@
                     <div class="col-md-4 ftco-animate">
                         <div class="blog-entry-2" data-aos-delay="100">
                             <a href="blog-single.html" class="block-20-1"
-                                style="background-image: url({% static 'images/fertilizer-1.jpg' %});">
+                                style="background-image: url(../static/images/fertilizer-1.jpg);">
                             </a>
                             <div class="text p-4">
                                 <div class="meta mb-3">
@@ -318,7 +250,8 @@
             <div class="row no-gutters">
                 <div class="block-3 d-md-flex ftco-animate">
                     <iframe class="image" src="https://www.youtube-nocookie.com/embed/be-TpNWMCc8" frameborder="0"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
                     <div class="text">
                         <h4 class="subheading">Illustration</h4>
                         <h2 class="heading"><a href="portfolio.html">Even the all-powerful Pointing has no control</a>
@@ -329,8 +262,9 @@
                     </div>
                 </div>
                 <div class="block-3 d-md-flex ftco-animate">
-                    <iframe  class="image order-2" src="https://www.youtube-nocookie.com/embed/be-TpNWMCc8" frameborder="0"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="image order-2" src="https://www.youtube-nocookie.com/embed/be-TpNWMCc8"
+                        frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
                     <div class="text order-1">
                         <h4 class="subheading">Application</h4>
                         <h2 class="heading"><a href="portfolio.html">Even the all-powerful Pointing has no control</a>
@@ -342,7 +276,8 @@
                 </div>
                 <div class="block-3 d-md-flex ftco-animate">
                     <iframe class="image" src="https://www.youtube-nocookie.com/embed/be-TpNWMCc8" frameborder="0"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
                     <div class="text">
                         <h4 class="subheading">Web Design</h4>
                         <h2 class="heading"><a href="portfolio.html">Even the all-powerful Pointing has no control</a>
@@ -522,21 +457,21 @@
 
 
     <!-- Scripts -->
-    <script src="{% static '/js/jquery.min.js' %}"></script>
-    <script src="{% static '/js/jquery-migrate-3.0.1.min.js' %}"></script>
-    <script src="{% static '/js/popper.min.js' %}"></script>
-    <script src="{% static '/js/bootstrap.min.js' %}"></script>
-    <script src="{% static '/js/jquery.easing.1.3.js' %}"></script>
-    <script src="{% static '/js/jquery.waypoints.min.js' %}"></script>
-    <script src="{% static '/js/jquery.stellar.min.js' %}"></script>
-    <script src="{% static '/js/owl.carousel.min.js' %}"></script>
-    <script src="{% static '/js/jquery.magnific-popup.min.js' %}"></script>
-    <script src="{% static '/js/jquery.animateNumber.min.js' %}"></script>
-    <script src="{% static '/js/scrollax.min.js' %}"></script>
+    <script src="..\static\js\jquery.min.js"></script>
+    <script src="..\static\js\jquery-migrate-3.0.1.min.js"></script>
+    <script src="..\static\js\popper.min.js"></script>
+    <script src="..\static\js\bootstrap.min.js"></script>
+    <script src="..\static\js\jquery.easing.1.3.js"></script>
+    <script src="..\static\js\jquery.waypoints.min.js"></script>
+    <script src="..\static\js\jquery.stellar.min.js"></script>
+    <script src="..\static\js\owl.carousel.min.js"></script>
+    <script src="..\static\js\jquery.magnific-popup.min.js"></script>
+    <script src="..\static\js\jquery.animateNumber.min.js"></script>
+    <script src="..\static\js\scrollax.min.js"></script>
     <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-    <script src="{% static '/js/google-map.js' %}"></script>
-    <script src="{% static '/js/main.js' %}"></script>
+    <script src="..\static\js\google-map.js"></script>
+    <script src="..\static\js\main.js"></script>
 
 
 </body>
