--- a/templates/lang_select.html
+++ b/templates/lang_select.html
@@ -1,132 +1,125 @@
-{% load static %}
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Document</title>
+    <title>select language</title>
 
     <!-- links -->
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,600,700,800,900&display=swap"
       rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="{% static 'css/animate.css' %}">
-    <link rel="stylesheet" href="{% static 'css/owl.theme.default.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/magnific-popup.css' %}">
-
-    <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/flaticon.css' %}">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}"> 
-
+    <link rel="stylesheet" href="../static/css/animate.css">
+    <link rel="stylesheet" href="../static/css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="../static/css/magnific-popup.css">
+    <link rel="stylesheet" href="../static/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="../static/css/flaticon.css">
+    <link rel="stylesheet" href="../static/css/style.css"> 
   </head>
-  <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
-      <div class="container">
-        <a class="navbar-brand" href="home.html">The<span>F</span>armer</a>
-    </nav>
+
+  <body>
+<!-- ================================================================================================================== -->
+
+
+  <!-- navbar started -->
+  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
+    <div class="container">
+      <a class="navbar-brand" href="#">The<span>F</span>armer</a>
+    </div>
+  </nav>
   <!-- ended navbar -->
 
 
-    <section class="hero-wrap degree-right js-fullheight">
-      <div class="home-slider js-fullheight owl-carousel">
-        <div class="slider-item js-fullheight" style="background-image:url({% static 'images/background4.jpg'%});">
-          <div class="overlay"></div>
-          <div class="container">
-            <div class="row no-gutters slider-text js-fullheight align-items-center">
-              <div class="col-md-6 ftco-animate">
-                <div class="text">
-                  <h1 class="mb-4">Choose your language</h1>
-                  <!-- <p style="color: white;">A small contribution to ml community by @procoders</p> -->
-                  <!-- <p class="mb-0"><a href="#" class="btn btn-primary py-md-3 py-2 px-2 px-md-4">Done</a></p> -->
-                </div>
-                <div class="container">
-                  <div class="row">
-                    <div class="col-md-2">
-                      <div class="btn-group">
-                        <button>English</button>
-                        <button>Hindi</button>
-                        <button>Punjabi</button>
-                      </div>
+<!-- ================================================================================================================== -->
+
+  <!-- Main working started -->
+  <section class="hero-wrap degree-right js-fullheight">
+    <div class="home-slider js-fullheight owl-carousel">
+
+      <!-- Added background image -->
+      <div class="slider-item js-fullheight" style="background-image:url('../static/images/background4.jpg');">
+        <div class="overlay"></div>
+        <div class="container">
+          <div class="row no-gutters slider-text js-fullheight align-items-center">
+            <div class="col-md-6 ftco-animate">
+              <div class="text">
+
+                <!-- Added main heading for the selected page -->
+                <h1 class="mb-4">Choose your language</h1>
+                <h1 class="mb-4">(अपनी भाषा चुनिए)</h1>
+              </div>
+
+              <!-- This form is used to go to signup_page -->
+              <form class='form' action="{{url_for('sign_up')}}" method="POST" >
+              <div class="container">
+                <div class="row">
+
+                  <!-- Buttons to select native language; upper three -->
+                  <div class="col-md-2">
+                    <div class="btn-group">
+                      <button type="submit" name="submit_button" value="English">English</button>
+                      <button type="submit" name="submit_button" value="Hindi">हिन्दी</button>
+                      <button type="submit" name="submit_button" value="Punjabi">ਪੰਜਾਬੀ</button>
                     </div>
                   </div>
-                  <div class="row">
-                    <div class="col-md-2">
-                      <div class="btn-group">
-                        <button>Marathi</button>
-                        <button>Telugu</button>
-                        <button>Haryanvi</button>
-                      </div>
+                </div>
+                <div class="row">
+
+                  <!-- Buttons to select native language; upper three -->
+                  <div class="col-md-2">
+                    <div class="btn-group">
+                      <button type="submit" name="submit_button" value="Marathi">मराठी</button>
+                      <button type="submit" name="submit_button" value="Tamil">తెలుగు</button>
+                      <button type="submit" name="submit_button" value="Haryanvi">हरियाणवी</button>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="col-lg-6 ftco-animate" style="position: relative; left:1px;">
-                <img src="{% static 'images/kisan-1.png' %}" alt="">
-              </div>
+            </form>
+            </div>
+            <!-- Added a side image -->
+            <div class="col-lg-6 ftco-animate" style="position: relative; left:1px;">
+              <img src="../static/images/kisan-1.png" alt="">
             </div>
           </div>
         </div>
       </div>
-    </section>
-
-    <!-- This button is used to go to signup_page -->
-    <form class='form' method="POST" , action='signup'>
-
-        {% csrf_token %}
-
-        <select class="form-control" name='language_selected' id="exampleFormControlSelect1">
-            
-            <option>English</option>
-            <option>Hindi</option>
-
-          </select>
-
-        <button type="submit" class="btn btn-success"> Submit </button>
-
-            <!-- <a href="http://127.0.0.1:8000/signup" 
-              class="btn btn-success btn-lg active" role="button"
-              aria-pressed="true">submit</a> -->
-
-    </form>
+    </div>
+  </section>
+  <!-- End of main task -->
 
 
-    <!-- <img src="{% static 'images/home.png' %}" alt="" /> -->
+<!-- ================================================================================================================ -->
 
 
-    <!-- loader -->
-    <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
-        <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
-        <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00" />
-        </svg></div>
+  <!-- loader -->
+  <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
+      <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
+      <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00" />
+      </svg>
+  </div>
+  <!-- loader ended -->
 
 
-    <script src="{% static 'js/jquery.min.js' %}"></script>
-    <script src="{% static 'js/jquery-migrate-3.0.1.min.js' %}"></script>
-    <script src="{% static 'js/popper.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'js/jquery.easing.1.3.js' %}"></script>
-    <script src="{% static 'js/jquery.waypoints.min.js' %}"></script>
-    <script src="{% static 'js/jquery.stellar.min.js' %}"></script>
-    <script src="{% static 'js/owl.carousel.min.js' %}"></script>
-    <script src="{% static 'js/jquery.magnific-popup.min.js' %}"></script>
-    <script src="{% static 'js/jquery.animateNumber.min.js' %}"></script>
-    <script src="{% static 'js/scrollax.min.js' %}"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-    <script src="{% static 'js/google-map.js' %}"></script>
-    <script src="{% static 'js/main.js' %}"></script>
+<!-- ================================================================================================================= -->
 
 
-    <!-- {{var_1}} {{var_2}}
-
-  {% if user.is_authenticated %}
-      Hi {{ user.username }}!
-    <p><a href="{% url 'logout' %}">logout</a></p>
-  {% else %}
-      <p>You are not logged in</p>
-      <a href="{% url 'login' %}">login</a>
-  {% endif %} -->
+  <!-- Addition of scripts -->
+  <script src="../static/js/jquery.min.js"></script>
+  <script src="../static/js/jquery-migrate-3.0.1.min.js"></script>
+  <script src="../static/js/popper.min.js"></script>
+  <script src="../static/js/bootstrap.min.js"></script>
+  <script src="../static/js/jquery.easing.1.3.js"></script>
+  <script src="../static/js/jquery.waypoints.min.js"></script>
+  <script src="../static/js/jquery.stellar.min.js"></script>
+  <script src="../static/js/owl.carousel.min.js"></script>
+  <script src="../static/js/jquery.magnific-popup.min.js"></script>
+  <script src="../static/js/jquery.animateNumber.min.js"></script>
+  <script src="../static/js/scrollax.min.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+  <script src="../static/js/google-map.js"></script>
+  <script src="../static/js/main.js"></script>
   </body>
-  
+
 </html>
